# otus_cpp_3

./: .travis.yml  CMakeLists.txt  README.md  allocator.cpp
include/: custom_list.h  factorial.h  permament_allocator.h
src/: allocator.cpp  factorial.cpp
test/: test_allocator.cpp  test_customlist.cpp
